feat(system): 七维数据权限引擎与字段脱敏落地4个试点列表（PRD-28 卡片4 / V103）
- DataScopeService：仓库/客户/供应商/业务员(SELF·SUB_TREE)/货主/建档人/商品分类品牌七维，
  多角色并集×用户层收窄交集×绑定仓/PDA强制仓，旧表名称列翻译，明细EXISTS与金额重算，
  DEFAULT DENY 仅零维度配置触发（有建档人列仅自己、无则1=0）
- FieldMasker + PermissionService 字段集：Map/List递归置null，超管短路，导出同链路
- 接线销售订单/采购入库/库存查询/应收列表；订单建档人改当前登录人
- V103 修复 V102 内置角色字段种子 field_id/field_code 误用致10组授权0行
- SensitiveFieldRegistry 大小写不敏感并补商品导出键；ExcelController List.of→Arrays.asList；
  pom 显式锁 commons-io 2.15.1（easyexcel 3.3.4 运行时依赖缺陷）

Co-Authored-By: Claude Code <noreply@anthropic.com>